--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react-dev-utils": "^7.0.1",
+    "react-dom": "^16.7.0",
     "react-fontawesome": "^1.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
