--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "1.1.4",
     "react-slick": "^0.23.1",
     "react-tabs": "^2.2.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
     "start": "react-scripts start",
